k8s/files/tekton/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - name: test
      image: nginx
      volumeMounts:
      - mountPath: "/test"
        name: shared-data
  volumes:
    - name: shared-data
      persistentVolumeClaim:
        claimName: tekton-pvc
